Get the basic functionality of the Processor working